tests/parser/errors/index_missing_bracket.mochi
let xs = [1,2,3]
let y = xs[1
